syntax = "proto3";
package protocol;
import "client-account.proto";
import "client-chat.proto";
import "client-game.proto";
import "header.proto";
import "unity.proto";

message EnterGameRep {
    int64  uid    = 1;
    int64  roomId = 2; //房间号
    int64  gameId = 3; //游戏id
    string gameIp = 4; //game服务器
}

message ReConnecReq {
    int64 uid = 1;
}

service Center4GateService {
    //------------------- account 账号 ----------------------
    rpc Login(LoginReq) returns (LoginAck) {
    }
    rpc Logout(LogoutReq) returns (LogoutAck) {
    }
    //重连
    rpc ReConnect(ReConnecReq) returns (CallAck) {
    }
    //踢下线
    rpc KickUser(KickUserReq) returns (CallAck) {
    }

    //------------------ Game 游戏 ------------------------
    rpc GetGameRoomTypeList(GetGameRoomTypeListReq) returns (GetGameRoomTypeListAck) {
    }

    //------------------- Chat 聊天系统 -------------------------
    rpc SendToUser(SendToUserReq) returns (CallAck) {
    }
    rpc SendToRoom(SendToRoomReq) returns (CallAck) {
    }
    rpc Boardcast(BoardcastReq) returns (CallAck) {
    }
}

message EndGameReq {
    int64 roomId = 1;
}

message SettleReq {
}

message SettleCoinReq {
    int32  gameId   = 1;
    int64  roomId   = 2;
    string roundNo  = 3;
    int64  coin     = 4;
    int32  gameType = 5;
}

service Center4GameService {
    rpc KickUser(KickUserReq) returns (CallAck) {
    }

    //游戏结束
    rpc EndGame(EndGameReq) returns (CallAck) {
    }

    //总结算 （录像，任务 。。）
    rpc Settle(SettleReq) returns (CallAck) {
    }
    //金币变化 （输/赢）
    rpc SettleCoin(SettleCoinReq) returns (CallAck) {
    }
}
